{
    "name": "InputSystem",
    "maps": [
        {
            "name": "BaseGameplay",
            "id": "d87cf249-eb10-4f60-9d6f-809cfe42dded",
            "actions": [
                {
                    "name": "MoveAction",
                    "type": "Value",
                    "id": "e3078cd4-9847-4a4a-88ec-dc7f86f83485",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "af2bb4ea-59e1-487d-8273-956b5e28f6dd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c2246708-e393-4f68-8bf4-1cbb7db7c489",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "914f97f8-58ff-4c3a-8835-f2e174c7a8a3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bcdf1dbc-042f-445a-8cf8-730833496360",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "77f424cc-72e1-4b64-b209-8ac2690bf241",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "2c092b90-3477-441f-ad74-96484bc16d8e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1b4de44c-cee9-413a-b76e-e17f807d1c72",
                    "path": "<Touchscreen>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fe192b63-0781-4e8a-9823-26607156dd07",
                    "path": "<Touchscreen>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "573c1642-38c3-4888-aedd-3b6ecd18372c",
                    "path": "<Touchscreen>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b8d098a9-02b4-45cd-b920-6a77786dc1ff",
                    "path": "<Touchscreen>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Android",
            "bindingGroup": "Android",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}